--- a/requirements.txt
+++ b/requirements.txt
@@ -41,11 +41,10 @@ pycparser==2.21
 Pygments==2.11.2
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
+pypiwin32==223
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.6
-pywin32==302
-pywin32-ctypes==0.2.0
 pyzmq==23.2.0
 readme-renderer==37.3
 requests==2.28.1
