--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,14 @@
 version: 2
 
 # Set the version of Python and other tools you might need
+# Image to use
 build:
-  os: "ubuntu-20.04"
-  tools:
-    python: "3.8"
+  image: testing
+
+# Configuration
+python:
+  version: 3.9
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
