--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,15 @@
-version: "2"
+version: 2
 
-# Set the OS, Python version and other tools you might need
 build:
-  os: ubuntu-22.04
+  os: "ubuntu-22.04"
   tools:
-    python: "3.10"
+    python: "3.12"
 
- python:
-   install:
-     - requirements: docs/requirements.txt
+# Build from the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+
+# Explicitly set the version of Python and its requirements
+python:
+  install:
+    - requirements: docs/requirements.txt
